syntax = "proto3";

import "user.proto";
import "data.proto";

// Require Go Package
option go_package = "/models";

// For Info about Lobby
message Lobby {
  Type type = 1;               // Type of Lobby
  string name = 2;             // Open Location Code of Lobby
  string topic = 3;            // Pubsub Address with OLC
  map<string, Peer> peers = 4; // Total Data of Active Peers
  Peer user = 5;               // User Peer reference

  enum Type {
    Local = 0;
    Remote = 1;
    User = 2;
  }

  message LocalInfo {
    string name = 1;
    string topic = 2;
    Location location = 3;
  }

  message RemoteInfo {
    bool isJoin = 1;
    int32 count = 2;
    string display = 3;
    string topic = 4;
    repeated string words = 5;
  }
}

// Message Sent when peer messages Lobby Topic
message LobbyEvent {
  string id = 1;      // Peer ID
  Peer from = 2;      // User Information
  string to = 3;      // Peer ID for DM
  string message = 4; // Message being sent

  // Event Type
  oneof event {
    LocalEvent local = 5;
    RemoteEvent remote = 6;
  }

  // Local Type Event
  enum LocalEvent {
    EXCHANGE = 0; // Peer has joined wants Info
    STANDBY = 1;  // Peer is taking break from lobby
    RESUME = 2;   // Peer has rejoined Lobby
    UPDATE = 3;   // Peer has changed position
    MESSAGE = 4;  // Peer has been messaged by a user
    EXIT = 5;     // Peer has Exited
  }

  // Remote Type Event
  enum RemoteEvent {
    REQUEST = 0;   // Peer has joined wants Info
    ACCEPT = 1;    // Peer is taking break from lobby
    DECLINE = 2;   // Peer has rejoined Lobby
    COMPLETED = 3; // Peer has changed position
  }
}
